# Tesi_Robot_Delta

./: CMakeLists.txt  README.md  plotscript.p
app/: CMakeLists.txt
app/src/: main.c
lib/kinematics_acceleration/: CMakeLists.txt
lib/kinematics_acceleration/include/: kinematics_acceleration.h
lib/kinematics_acceleration/src/: kinematics_acceleration.c
lib/kinematics_position/: CMakeLists.txt
lib/kinematics_position/include/: kinematics_position.h
lib/kinematics_position/src/: kinematics_position.c
lib/kinematics_torque/: CMakeLists.txt
lib/kinematics_torque/include/: kinematics_torque.h
lib/kinematics_torque/src/: kinematics_torque.c
lib/kinematics_velocity/: CMakeLists.txt
lib/kinematics_velocity/include/: kinematics_velocity.h
lib/kinematics_velocity/src/: kinematics_velocity.c
lib/matrix/: CMakeLists.txt
lib/matrix/include/: matrix.h
lib/matrix/src/: matrix.c
lib/path_generation/: CMakeLists.txt
lib/path_generation/include/: path_generation.h
lib/path_generation/src/: path_generation.c
